manifests/calibre-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  namespace: calibre-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      containers:
        - name: calibre-web-automated
          image: crocodilestick/calibre-web-automated:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
            - name: http
              containerPort: 8083
          volumeMounts:
            - name: config
              mountPath: /config
            - name: calibre-library
              mountPath: /calibre-library
              readOnly: true
            - name: cwa-book-ingest
              mountPath: /cwa-book-ingest

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: calibre-web-config

        - name: calibre-library
          hostPath:
            path: /mnt/media/Books
            type: Directory

        - name: cwa-book-ingest
          emptyDir:
            sizeLimit: 10Gi
