manifests/calibre-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: calibre-web
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.234
  selector:
    app: calibre-web
  ports:
    - name: http
      port: 80
      targetPort: 8083
