manifests/calibre-web/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-web
  namespace: calibre-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`calibre.home`)
      kind: Rule
      services:
        - name: calibre-web
          port: 80
